--- a/dapp/index.html
+++ b/dapp/index.html
@@ -7,6 +7,7 @@
     <title>Smart Distributor dApp</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- // Body of the dApp -->
 
 <body>
     <div class="container">
